# rucode-competition

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
C-text-classification/: (С)_rucode_final2024_team_0407.ipynb
C-text-classification/data/: colab_test.csv  private_test.csv  public_test.csv  sample_submission_seed_0.csv  test_sample.csv  train.csv  train_sample.csv
C-text-classification/notebooks/: 62-43 copy.ipynb  62-43.ipynb  lol.ipynb  main spcay.ipynb  main summarization.ipynb  main.ipynb
C-text-classification/submissions/: rubert_tiny_2.csv  rubert_tiny_2_sliding_window.csv  submission.csv
C-text-classification/utils/: metrics.py  preprocess.py
D-time-series-forecasting/: (D)_rucode_final2024_team_0407.ipynb
D-time-series-forecasting/data/: sample_submission.csv
D-time-series-forecasting/notebooks/: autogluon.ipynb  catboost_try_with_datapreprocessing copy.ipynb  catrboost_top_score copy.ipynb  catrboost_top_score.ipynb  main.ipynb  new_84.66_top_score copy.ipynb  new_84_top_score.ipynb  new_current.ipynb  skforecast.ipynb
D-time-series-forecasting/submissions/: TBATS.csv  arima_try.csv  autogluon600.csv  catboost_1.csv  catboost_2k.csv  catboost_2k_1.csv  catboost_2k_2.csv  catboost_cox.csv  catboost_fifth_try.csv  catboost_first_try.csv  catboost_forth_try.csv  catboost_grid_search_2.csv  catboost_other.csv  catboost_second_try.csv  catboost_third_try.csv  default_prophet.csv  default_prophet_multiplicative.csv  default_prophet_on_full.csv  simpleExponentialSmoothing.csv  simpleExponentialSmoothing_ver2.csv  skforecast.csv
E-image-classification/notebooks/: final_notebook_colab.ipynb  final_notebook_local.ipynb
E-image-classification/other_notebooks/: correct_apple_openclip.ipynb  current_69_top_score.ipynb  current_work.ipynb  labeling.ipynb  main.ipynb  trash.py
E-image-classification/submissions/: apple-DFN5B-CLIP-ViT-H-14-378_0.2_top_prompts_with_ts.csv  sample_submission_public.csv
pres/: team_0407.pptx
Решения победителей/A/: submission_public.csv
Решения победителей/C/: predict.ipynb  train.ipynb
Решения победителей/D/: predict.ipynb  train.ipynb
Решения победителей/E/: pl.csv  requirements.txt  test.py  train.py
